--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="fahrenheit_switch_label">F</string>
     <string name="menu_title_search_by_name">Weather search by location name</string>
     <string name="menu_title_search_by_coords">Weather search by location coords</string>
+    <string name="searching_item_temp_value_example">Moscow, 25° C</string>
+    <string name="searching_item_date_example">01.01.2022 12:00:00</string>
+    <string name="max_temp_example">max: 30° C</string>
+    <string name="min_temp_example">mix: 20° C</string>
+    <string name="temp_graph_icon">Temp_graph_icon</string>
 </resources>
