--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="max_temp_example">max: 30° C</string>
     <string name="min_temp_example">mix: 20° C</string>
     <string name="temp_graph_icon">Temp_graph_icon</string>
+    <string name="search_view_hint">Введите название города</string>
 </resources>
