--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,9 @@
     <string name="search_view_hint">Введите название города</string>
     <string name="weather_value_in_celsius">%1s° C</string>
     <string name="weather_value_in_fahrenheit">%1s° F</string>
+    <string name="max_temp_value_in_celsius">max: %1s° C</string>
+    <string name="min_temp_value_in_celsius">min: %1s° C</string>
+    <string name="max_temp_value_in_fahrenheit">max: %1s° F</string>
+    <string name="min_temp_value_in_fahrenheit">min: %1s° F</string>
     <string name="weather_list_item_location_name">%1s,\ </string>
 </resources>
