--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="unable_to_turn_location_on">На данном устройстве отсутствуют настройки определения местоположения</string>
     <string name="alert_message_if_location_is_off">При выключенном определении местоположения функция получения данных о погоде по местоположению работать не будет</string>
     <string name="default_alert_negative_button">Отменить</string>
+    <string name="argument_error">Ошибка передачи аргумента</string>
 </resources>
