network observer released

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="default_alert_positive_button">OK</string>
     <string name="unable_to_turn_location_on">На данном устройстве отсутствуют настройки определения местоположения</string>
     <string name="alert_message_if_location_is_off">При выключенном определении местоположения функция получения данных о погоде по местоположению работать не будет</string>
+    <string name="alert_message_if_internet_is_off">Проверьте подключение к WI-FI или сотовой сети</string>
+    <string name="alert_title_if_internet_is_off">Отсутствует интернет-соединение</string>
     <string name="default_alert_negative_button">Отменить</string>
     <string name="argument_error">Ошибка передачи аргумента</string>
     <string name="filter_data_hint">Данные за период:\nот %1s\nдо %2s</string>
